# WorkshopContent

./: .travis.yml  CMakeLists.txt  Makefile  README.md
examplecontent/: CMakeLists.txt  ExampleContent.h  Makefile
examplecontent/ExampleAlgorithmTools/: ExampleAlgorithmTool.cc  ExampleAlgorithmTool.h
examplecontent/ExampleAlgorithms/: AccessListsAlgorithm.cc  AccessListsAlgorithm.h  CreateAdditionalCaloHitsAlgorithm.cc  CreateAdditionalCaloHitsAlgorithm.h  CreateClustersAlgorithm.cc  CreateClustersAlgorithm.h  CreateClustersDaughterAlgorithm.cc  CreateClustersDaughterAlgorithm.h  CreatePfosAlgorithm.cc  CreatePfosAlgorithm.h  CreateVerticesAlgorithm.cc  CreateVerticesAlgorithm.h  DeleteClustersAlgorithm.cc  DeleteClustersAlgorithm.h  DisplayListsAlgorithm.cc  DisplayListsAlgorithm.h  FragmentClustersAlgorithm.cc  FragmentClustersAlgorithm.h  MergeClustersAlgorithm.cc  MergeClustersAlgorithm.h  ReconfigureClustersAlgorithm.cc  ReconfigureClustersAlgorithm.h  SelectHitSubsetAlgorithm.cc  SelectHitSubsetAlgorithm.h  UseAlgorithmToolAlgorithm.cc  UseAlgorithmToolAlgorithm.h  UsePluginsAlgorithm.cc  UsePluginsAlgorithm.h  WriteTreeAlgorithm.cc  WriteTreeAlgorithm.h
examplecontent/ExampleHelpers/: ExampleHelper.cc  ExampleHelper.h
examplecontent/ExampleObjects/: ExampleCaloHit.h
examplecontent/ExamplePlugins/: ExampleEnergyCorrectionPlugin.cc  ExampleEnergyCorrectionPlugin.h  ExampleParticleIdPlugin.cc  ExampleParticleIdPlugin.h  ExamplePseudoLayerPlugin.cc  ExamplePseudoLayerPlugin.h
examplecontent/Test/: PandoraExample.cc
larexamplecontent/: LArExampleContent.h
larexamplecontent/ExampleAlgorithmTools/: ExampleAlgorithmTool.cc  ExampleAlgorithmTool.h
larexamplecontent/ExampleAlgorithms/: AccessListsAlgorithm.cc  AccessListsAlgorithm.h  CreateAdditionalCaloHitsAlgorithm.cc  CreateAdditionalCaloHitsAlgorithm.h  CreateClustersAlgorithm.cc  CreateClustersAlgorithm.h  CreateClustersDaughterAlgorithm.cc  CreateClustersDaughterAlgorithm.h  CreatePfosAlgorithm.cc  CreatePfosAlgorithm.h  CreateVerticesAlgorithm.cc  CreateVerticesAlgorithm.h  DeleteClustersAlgorithm.cc  DeleteClustersAlgorithm.h  DisplayListsAlgorithm.cc  DisplayListsAlgorithm.h  FragmentClustersAlgorithm.cc  FragmentClustersAlgorithm.h  MergeClustersAlgorithm.cc  MergeClustersAlgorithm.h  ReconfigureClustersAlgorithm.cc  ReconfigureClustersAlgorithm.h  SelectHitSubsetAlgorithm.cc  SelectHitSubsetAlgorithm.h  UseAlgorithmToolAlgorithm.cc  UseAlgorithmToolAlgorithm.h  UsePluginsAlgorithm.cc  UsePluginsAlgorithm.h  WriteTreeAlgorithm.cc  WriteTreeAlgorithm.h
larexamplecontent/ExampleHelpers/: ExampleHelper.cc  ExampleHelper.h
larexamplecontent/ExampleObjects/: ExampleCaloHit.h
larexamplecontent/ExamplePlugins/: ExampleEnergyCorrectionPlugin.cc  ExampleEnergyCorrectionPlugin.h  ExampleParticleIdPlugin.cc  ExampleParticleIdPlugin.h  MicroBooNEPseudoLayerPlugin.cc  MicroBooNEPseudoLayerPlugin.h  MicroBooNETransformationPlugin.cc  MicroBooNETransformationPlugin.h
scripts/: PandoraSettings_LArExample.xml  PandoraSettings_SimpleExample.xml  PandoraSettings_Workshop.xml
scripts/uboone/: PandoraSettings_Cheat.xml  PandoraSettings_MicroBooNE_Cosmic.xml  PandoraSettings_MicroBooNE_Neutrino.xml  PandoraSettings_MicroBooNE_SingleNeutrino.xml
settings/: PandoraSettings_Workshop.xml
settings/uboone/: Geometry_MicroBooNE.xml  PandoraSettings_Cheat.xml  PandoraSettings_MicroBooNE_Cosmic.xml  PandoraSettings_MicroBooNE_Neutrino.xml  PandoraSettings_MicroBooNE_SingleNeutrino.xml
test/: PandoraLArExample.cc
workshopcontent/: CMakeLists.txt  Makefile
workshopcontent/Algorithms/: CreateNewAlgorithm.py  MyClusterMergingAlgorithm.cc  MyClusterMergingAlgorithm.h  MyParticleCreationAlgorithm.cc  MyParticleCreationAlgorithm.h  MyParticleMergingAlgorithm.cc  MyParticleMergingAlgorithm.h  MyTestAlgorithm.cc  MyTestAlgorithm.h  MyTrackShowerIdAlgorithm.cc  MyTrackShowerIdAlgorithm.h  TemplateAlgorithm.cc  TemplateAlgorithm.h
workshopcontent/Plugins/: MicroBooNEPseudoLayerPlugin.cc  MicroBooNEPseudoLayerPlugin.h  MicroBooNETransformationPlugin.cc  MicroBooNETransformationPlugin.h
workshopcontent/Test/: PandoraWorkshop.cc
